--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec babel-node server/src/app.js",
+    "dev": "nodemon",
     "start": "babel-node dist/src/app.js",
-    "build": "babel server -d dist"
+    "build": "tsc -p ."
   },
   "repository": {
     "type": "git",
@@ -26,13 +26,17 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.18.2",
     "babel-loader": "^8.2.5",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "ts-node": "^10.8.1"
   },
   "dependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.0",
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^4.13.21",
-    "mongoose-auto-increment": "^5.0.1"
+    "mongoose-auto-increment": "^5.0.1",
+    "typescript": "^4.7.3"
   }
 }
