--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.0.0",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^4.13.21",
+    "mongoose": "^6.4.0",
     "mongoose-auto-increment": "^5.0.1",
     "typescript": "^4.7.3"
   }
