--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@babel/node": "^7.18.5",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.18.2",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "babel-loader": "^8.2.5",
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.1"
