--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.18.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/jsonwebtoken": "^8.5.8",
     "babel-loader": "^8.2.5",
     "nodemon": "^2.0.16",
@@ -37,6 +38,7 @@
     "@types/node": "^18.0.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
