--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon",
+    "dev:client": "cd client && npm run start",
+    "dev:admin": "cd admin && npm run start",
     "start": "babel-node dist/src/app.js",
     "build": "tsc -p ."
   },
