--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon",
+    "dev:server": "nodemon",
     "dev:client": "cd client && npm run start",
     "dev:admin": "cd admin && npm run start",
     "start": "babel-node dist/src/app.js",
