--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.7",
     "babel-loader": "^8.2.5",
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.1"
@@ -45,9 +46,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
-    "mongoose-auto-increment": "^5.0.1",
-    "typescript": "^4.7.3"
+    "multer": "^1.4.5-lts.1",
+    "typescript": "^4.7.3",
+    "uuidv4": "^6.2.13"
   }
 }
