--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^16.11.39",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.5",
+    "styled-components": "^5.3.5",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
@@ -42,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.184",
+    "@types/styled-components": "^5.1.26"
   }
 }
