--- a/admin/package.json
+++ b/admin/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "eslint": "^8.30.0",
+    "eslint-config-airbnb": "^19.0.4",
     "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
