--- a/package.json
+++ b/package.json
@@ -32,11 +32,23 @@
     "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "^1.4.7",
+    "@typescript-eslint/parser": "^5.47.0",
     "babel-loader": "^8.2.5",
+    "eslint": "^8.30.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "nodemon": "^2.0.16",
+    "prettier": "^2.8.1",
     "ts-node": "^10.8.1"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.19.1",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.0.0",
