--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "strict": true, //strict 옵션 활성화
     "moduleResolution": "node", //모듈 해석 방법 설정: 'node' (Node.js)
     "esModuleInterop": true,
+    "typeRoots": ["./node_modules/@types", "./server/src/customType"]
   },
   "exclude": ["node_modules", "./admin/**/*", "./client/**/*"]
 }
