--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,8 @@
     "esModuleInterop": true,
     "typeRoots": ["./node_modules/@types", "./server/src/customType"]
   },
+  "ts-node": {
+    "files": true
+  },
   "exclude": ["node_modules", "./admin/**/*", "./client/**/*"]
 }
